Navigation z-index fix

--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -4,6 +4,7 @@
   margin: 0px;
   background-color: black;
   width: 100%;
+  z-index: 10;
 }
 
 .logo h1 {
@@ -19,10 +20,11 @@
   display: flex;
   justify-content: center;
   list-style: none;
-  padding: 0;
-  margin: 0;
+  padding: 0px 0px 10px 0px; 
+  margin: 0px;
   height: 50px;
   font-size: 1.25em;
+  z-index: 10;
 }
 
 .navigationItem {
@@ -33,6 +35,8 @@
 }
 
 .navigationItem a {
+  width: 100%;
+  text-align: center;
   color: white;
   text-decoration: none;
 }
@@ -72,7 +76,6 @@ color: var(--primary);
 @media(max-width: 760px) {
   .logo {
       position: fixed;
-      z-index: 5;
       background-color: black;
       width: 100%;
   }
@@ -85,7 +88,6 @@ color: var(--primary);
       justify-content: center;
       height: 70px;
       background-color: var(--primary);
-      z-index: 5;
       position: fixed;
       top: 0px;
       margin-left: 15px;
@@ -100,7 +102,6 @@ color: var(--primary);
       height: auto;
       position: fixed;
       width: 100%;
-      z-index: 1;
       background-color: black;
       /* visibility: hidden; */
   } 
@@ -130,15 +131,6 @@ color: var(--primary);
     width: 100%;
     height: 100%;
   }
-
-  /* .blocker {
-    pointer-events: none;
-    position: fixed; 
-    z-index: 2; 
-    height: 100vh;
-    width: 100vw;
-    background-color: lightgrey;
-  } */
 }
 
 @media(min-width: 760px) {
